products/storage/rook-ceph/templates/dashboard/ceph-dashboard-security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ceph-dashboard-route-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: rook-ceph-dashboard
  oidc:
    provider:
      issuer: https://authentik.feddema.dev/application/o/ceph/
    redirectURL: https://ceph.feddema.dev/oauth2/callback
    logoutPath: /oauth2/sign_out
    clientID: 6Zp0sXld7UwJsqF50KeNffI1FB6QcQkKUxDmEyMg
    clientSecret:
      name: ceph-dashboard-route-oidc-secret
    scopes: ["openid", "profile", "email", "groups", "roles"]
    disableTokenEncryption: true
    cookieNames:
      idToken: "token"
    forwardAccessToken: true
